<resources>
    <string name="app_name">Real Time Database</string>

    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_subtitle">User Control Panel</string>
    <string name="profile_title">My Profile</string>
    <string name="edit_details">Edit Details</string>
    <string name="analytics_title">Analytics</string>
    <string name="alerts_title">Alerts</string>
</resources>